Assignment 2 adding css to our portfolio

--- a/New folder/index.html
+++ b/New folder/index.html
@@ -34,9 +34,9 @@
       <!-- About Me -->
       <h2 id="about">About Me</h2>
       <img
-        src="New folder\picture.jpg"
+        src="picture.jpg"
         alt="portfolio"
-        style="width: 22vw; height: 22vw; border-radius: 50%"
+        style="width: 22vw; height: 22vw; border-radius: 50%;"
       />
 
       <p>
@@ -111,5 +111,6 @@
         <button type="submit">Send</button>
       </form>
     </footer>
+    <button id="backToTop" onclick="window.scrollTo({top:0,behavior:'smooth'})">↑</button>
   </body>
 </html>
